# mcp-knowledge-base

./: .gitignore  README.md  pyproject.toml
src/mcp_knowledge_base/: __init__.py  chunks.py  format.py  ingest.py  reporter.py  service.py
tests/: test_basics.py
